--- a/www/index.html
+++ b/www/index.html
@@ -15,20 +15,28 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <style>
+        <style>/*my all css*/
+
             #leftpanel {
                 opacity: 0.9;
                 color: #fff;
-                background: linear-gradient(rgba(116, 130, 227, 0.5), rgb(116, 130, 227)), url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2utzkuX3AIBlULpNx1egsC7wIEP42by-RXBBTcgGGBE5GKHSy);
-                background-size: 100%;
+                background: linear-gradient(rgba(116, 130, 227, 0.5), rgba(238, 238, 238, 0.81)), url(img/menuWallpaper.jpg);
+                background-size: cover;
+                background-repeat: no-repeat;
             }
             .ui-li-divider {
                 color: #eee !important;
                 background-color: rgba(57, 73, 163, 0.82) !important;
             }
-            li {
-                text-align: right ;
+
+            .ui-page-theme-a .ui-btn:hover, html .ui-bar-a .ui-btn:hover, html .ui-body-a .ui-btn:hover, html body .ui-group-theme-a .ui-btn:hover, html head+body .ui-btn.ui-btn-a:hover {
+                background-color: #ededed;
+                border-color: #ddd;
+                color: #333 !important;
+                text-shadow: 0 1px 0 #f3f3f3;
             }
+
+
         </style>
     </head>
     <body dir="rtl" >
@@ -50,9 +58,42 @@
             </div>
 
             <div role="main" class="ui-content" data-inset="false">
-                <p>مليارات حول العالم حيث لا إعلام معاصر يوصل لهم معنى الإسلام، وأصبح من الصعوبة بمكان إيصال دين الرحمة لكل فرد منهم عبر السفر والطرق التقليدية.
 
-                    يسعى #مشروع_هدهد لتقديم الإسلام لهم بأجمل صورة عبر إعلام احترافي عالمي بلغات مختلفة؛ليغيروا مفهومهم الخاطئ عن دين السلام ومن ثم يدخلوا في دين الله أفواجا، ويقدّم لهم بعد ذلك مدرسة الكترونية ليتعلموا مبادئ دينهم..</p>
+
+                <div class="nd2-card">
+
+                    <div class="card-title has-avatar">
+                        <img class="card-avatar" src="//lorempixel.com/200/200">
+                        <h3 class="card-primary-title">مشروع هدهد</h3>
+                        <h5 class="card-subtitle">سفير السلام</h5>
+                    </div>
+
+                    <div class="card-media">
+                        <img src="img/injaz.jpg">
+                    </div>
+
+                    <div class="card-supporting-text has-action">
+                        مليارات حول العالم حيث لا إعلام معاصر يوصل لهم معنى الإسلام، وأصبح من الصعوبة بمكان إيصال دين الرحمة لكل فرد منهم عبر السفر والطرق التقليدية.
+
+                        يسعى <strong><a href="https://twitter.com/search?q=%23%D9%85%D8%B4%D8%B1%D9%88%D8%B9_%D9%87%D8%AF%D9%87%D8%AF">#مشروع_هدهد</a></strong> لتقديم الإسلام لهم بأجمل صورة عبر إعلام احترافي عالمي بلغات مختلفة؛ليغيروا مفهومهم الخاطئ عن دين السلام ومن ثم يدخلوا في دين الله أفواجا، ويقدّم لهم بعد ذلك مدرسة الكترونية ليتعلموا مبادئ دينهم..
+                    </div>
+
+                    <div class="card-action">
+                        <div class="align-right">
+                            <a class="twitter-timeline"  href="https://twitter.com/hashtag/%D9%85%D8%B4%D8%B1%D9%88%D8%B9_%D9%87%D8%AF%D9%87%D8%AF" 
+                               data-widget-id="906243637616488448"
+                               data-link-color="#820bbb"
+                               data-chrome="nofooter"
+                               data-tweet-limit="3"
+                               >تغريدات #مشروع_هدهد</a>
+                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
 
 
                 <div class="nd2-card" style="text-align: center">
