--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
                 <div class="nd2-card">
 
                     <div class="card-title has-avatar">
-                        <img class="card-avatar" src="//lorempixel.com/200/200">
+                        <img class="card-avatar" src="http://lorempixel.com/200/200/">
                         <h3 class="card-primary-title">مشروع هدهد</h3>
                         <h5 class="card-subtitle">سفير السلام</h5>
                     </div>
@@ -73,9 +73,9 @@
                     </div>
 
                     <div class="card-supporting-text has-action">
-                        مليارات حول العالم حيث لا إعلام معاصر يوصل لهم معنى الإسلام، وأصبح من الصعوبة بمكان إيصال دين الرحمة لكل فرد منهم عبر السفر والطرق التقليدية.
-
-                        يسعى <strong><a href="https://twitter.com/search?q=%23%D9%85%D8%B4%D8%B1%D9%88%D8%B9_%D9%87%D8%AF%D9%87%D8%AF">#مشروع_هدهد</a></strong> لتقديم الإسلام لهم بأجمل صورة عبر إعلام احترافي عالمي بلغات مختلفة؛ليغيروا مفهومهم الخاطئ عن دين السلام ومن ثم يدخلوا في دين الله أفواجا، ويقدّم لهم بعد ذلك مدرسة الكترونية ليتعلموا مبادئ دينهم..
+<p>                        مليارات حول العالم حيث لا إعلام معاصر يوصل لهم معنى الإسلام، وأصبح من الصعوبة بمكان إيصال دين الرحمة لكل فرد منهم عبر السفر والطرق التقليدية.</p>
+<p><br></p>
+                       <p> يسعى <strong><a href="https://twitter.com/search?q=%23%D9%85%D8%B4%D8%B1%D9%88%D8%B9_%D9%87%D8%AF%D9%87%D8%AF">#مشروع_هدهد</a></strong> لتقديم الإسلام لهم بأجمل صورة عبر إعلام احترافي عالمي بلغات مختلفة؛ليغيروا مفهومهم الخاطئ عن دين السلام ومن ثم يدخلوا في دين الله أفواجا، ويقدّم لهم بعد ذلك مدرسة الكترونية ليتعلموا مبادئ دينهم..</p>
                     </div>
 
                     <div class="card-action">
